# dstack-quote-sidecar

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: application.rs  config.rs  handlers.rs  main.rs
