[package]
name = "dstack-quote-sidecar"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight HTTP sidecar service for Dstack TEE attestation"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
chrono = "0.4.43"
config = "0.15.19"
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
